--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "cordova": "^8.0.0"
     },
     "dependencies": {
+        "cordova-android": "^7.0.0",
         "cordova-browser": "^5.0.3",
         "cordova-plugin-whitelist": "^1.3.3"
     },
@@ -21,7 +22,8 @@
             "cordova-plugin-whitelist": {}
         },
         "platforms": [
-            "browser"
+            "browser",
+            "android"
         ]
     }
 }
