--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "cordova-browser": "^5.0.3",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-media": "^5.0.2",
+        "cordova-plugin-nativeaudio": "^3.0.9",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-media": {}
+            "cordova-plugin-media": {},
+            "cordova-plugin-nativeaudio": {}
         },
         "platforms": [
             "browser",
