--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -21,6 +21,7 @@ apply plugin: 'com.android.application'
 
 buildscript {
     repositories {
+        google()
         mavenCentral()
         jcenter()
         maven {
