--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -20,6 +20,7 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
         maven {
             url "https://maven.google.com"
