--- a/platforms/browser/platform_www/manifest.json
+++ b/platforms/browser/platform_www/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "HelloCordova",
-  "short_name": "HelloCordova",
+  "name": "LiveJudge",
+  "short_name": "LiveJudge",
   "description": "Description of your app from template",
   "start_url": "index.html",
   "scope": "index.html",
